--- a/grappelli_safe/static/grappelli/css/forms.css
+++ b/grappelli_safe/static/grappelli/css/forms.css
@@ -230,7 +230,7 @@ option:last-child {
 
 input[type=checkbox], input[type=radio] {
     position: relative;
-    margin: 0 0 0 130px;
+    margin: 0;
     vertical-align: top;
 }
 input[type=checkbox] {
